# spargen

./: .gitattributes  .gitignore  .versionrc  AGENTS.md  Cargo.toml  README.md  deny.toml  hk.pkl  mise.toml  release-plz.toml
.github/workflows/: benchmarks.yml  ci.yml  release-plz.yml
corpus/: README.md  manifest.toml
corpus/github-api-3-0/: api.github.com.json
corpus/github-api-3-1/: api.github.com.json  spargen.toml
corpus/kubernetes-authentication-v1/: apis__authentication.k8s.io__v1_openapi.json
corpus/meilisearch/: open-api.json
corpus/ollama/: openapi.yaml
corpus/openai-openapi/: openapi.yaml
corpus/openapi-boilerplate/src/: openapi.yaml
corpus/openapi-boilerplate/src/parameters/path/: petId.yaml
corpus/openapi-boilerplate/src/parameters/query/: limit.yaml
corpus/openapi-boilerplate/src/paths/: pet.yaml  pets.yaml
corpus/openapi-boilerplate/src/responses/: NullResponse.yaml  UnexpectedError.yaml
corpus/openapi-boilerplate/src/schemas/: Error.yaml  Pet.yaml
corpus/recipes/: README.md  aide.json  poem-openapi.json  utoipa-untagged-overlap.json  utoipa.json
corpus/stripe/: spec3.json
corpus/twilio-api-2010/: twilio_api_v2010.json
docs/: benchmarks.md  compatibility.md  corpus.md  errors.md  prd.md  recipes.md  support-matrix.md  testing.md
docs/book/: book.toml
docs/book/src/: SUMMARY.md  benchmarks.md  cli.md  compatibility.md  corpus.md  errors.md  getting-started.md  introduction.md  recipes.md  runtime.md  support-matrix.md  testing.md
examples/petstore/: Cargo.toml  README.md  build.rs  petstore.yaml
examples/petstore-macro/: Cargo.toml  README.md
examples/petstore-macro/src/: main.rs
examples/petstore/src/: main.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: frontend.rs
references/: README.md
scripts/: check-github-api.sh  compare-generators.sh
spargen/: CHANGELOG.md  Cargo.toml
spargen-macro/: CHANGELOG.md  Cargo.toml  README.md
spargen-macro/src/: lib.rs
spargen/benches/: generate.rs
spargen/src/: lib.rs
spargen/src/cli/: args.rs  config.rs  exit.rs  mod.rs  run.rs  watch.rs
spargen/src/codegen/: emit.rs  format.rs  mod.rs
spargen/src/compat/: mod.rs
spargen/src/diag/: code.rs  collect.rs  interp.rs  mod.rs  pointer.rs  provenance.rs  render.rs  severity.rs  span.rs
spargen/src/emit/: check.rs  header.rs  manifest.rs  mod.rs
spargen/src/ir/: auth.rs  dump.rs  invariant.rs  media.rs  mod.rs  operation.rs  types.rs
spargen/src/name/: casing.rs  ident.rs  keyword.rs  mod.rs  scope.rs  synth.rs
spargen/src/oas31/: audit.rs  deserialize.rs  document.rs  lower.rs  metaschema.rs  mod.rs  resolve.rs  schema.rs
spargen/src/source/: bundle.rs  lock.rs  mod.rs  parse.rs  remote.rs  sha256.rs  value.rs  vendor.rs
spargen/src/support/: mod.rs
spargen/src/support/runtime/: auth.rs  blocking.rs  client.rs  dispatch.rs  error.rs  middleware.rs  paginate.rs  parameter.rs  response.rs  retry.rs  stream.rs  transport.rs  wasm.rs  xml.rs
spargen/src/surface/: mod.rs
spargen/tests/: carve.rs  cli.rs  config.rs  determinism.rs  diff.rs  drift.rs  e2e.rs  frontend.rs  fuzz_frontend.rs  lowering_props.rs  recipes.rs  snapshot.rs
spargen/tests/snapshots/: snapshot__github_api_3_0.snap  snapshot__github_api_3_1.snap  snapshot__github_api_3_1_carve.snap  snapshot__ollama.snap  snapshot__ollama_surface.snap  snapshot__openai_openapi.snap  snapshot__openapi_boilerplate.snap  snapshot__openapi_boilerplate_surface.snap
support-runtime/: Cargo.toml
support-runtime/src/: auth.rs  blocking.rs  client.rs  dispatch.rs  error.rs  lib.rs  middleware.rs  paginate.rs  parameter.rs  response.rs  retry.rs  stream.rs  transport.rs  wasm.rs  xml.rs
