# Spargen — a compile-time-correct Rust client generator for OpenAPI 3.1.x.
#
# One published crate (`spargen`), plus a `publish = false` `support-runtime` member that
# holds the freestanding runtime embedded verbatim into generated output.
# The `xtask` member (layer lint, corpus tooling) is reserved for later.
[workspace]
resolver = "2"
members = ["spargen", "support-runtime"]
# members = ["spargen", "support-runtime", "xtask"]  # reserved

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
authors = ["Justin Chung"]
repository = "https://github.com/getkono/spargen"
description = "A compile-time-correct Rust client generator for OpenAPI 3.1.x."
keywords = ["openapi", "codegen", "client"]
categories = ["development-tools", "api-bindings"]

# Shared dependency versions. Each subsystem opts in from its own crate manifest; entries are
# added as the subsystem that first needs them lands (see the per-commit plan).
[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
camino = "1.1"
indexmap = "2.2"
yaml-rust2 = "0.11"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
prettyplease = "0.2"
clap = { version = "4.5", features = ["derive"] }
proptest = "1.11"
tempfile = "3.10"

[profile.release]
strip = true
lto = "thin"
