# Spargen — a compile-time-correct Rust client generator for OpenAPI 3.1.x.
#
# Two published crates: `spargen` (the library + CLI) and `spargen-macro` (a thin proc-macro
# shim exposing `generate_api!`). Neither ever enters a consumer's RUNTIME graph — a proc-macro
# crate and everything it reaches are host/build-time only. Plus a `publish = false`
# `support-runtime` member holding the freestanding runtime embedded verbatim into generated output.
# The `xtask` member (layer lint, corpus tooling) is reserved for later.
[workspace]
resolver = "2"
members = ["spargen", "spargen-macro", "support-runtime"]
# members = ["spargen", "support-runtime", "xtask"]  # reserved
# The `fuzz/` cargo-fuzz crate is a deliberately-excluded, opt-in workspace member: it depends on
# libfuzzer-sys and needs a nightly libFuzzer sysroot, neither of which should touch the normal
# `cargo build --workspace` / `check` / `lint` / `test` / `deny` paths. Building it is manual —
# `cargo +nightly fuzz run frontend` (see `fuzz/README.md`).
exclude = ["fuzz"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
authors = ["Justin Chung"]
repository = "https://github.com/getkono/spargen"
description = "A compile-time-correct Rust client generator for OpenAPI 3.1.x."
keywords = ["openapi", "codegen", "client"]
categories = ["development-tools", "api-bindings"]

# Shared dependency versions. Each subsystem opts in from its own crate manifest; entries are
# added as the subsystem that first needs them lands (see the per-commit plan).
[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
camino = "1.1"
indexmap = "2.2"
yaml-rust2 = "0.11"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
prettyplease = "0.2"
clap = { version = "4.5", features = ["derive"] }
toml = "0.8"
# Debounced filesystem watching for the CLI `generate --watch` loop. CLI-only (rides the `cli`
# feature); never enters a library/build.rs graph or the generated-output runtime.
notify-debouncer-mini = "0.4"
proptest = "1.11"
tempfile = "3.10"
insta = "1.43"
# Statistics-driven benchmark harness for `spargen/benches/` (run via `cargo bench`). Dev-only —
# never in a library/build.rs graph nor the generated-output runtime. Default features off to skip
# the `plotters`/`rayon` report stack (unused here); `cargo_bench_support` keeps it usable under
# `cargo bench`.
criterion = { version = "0.8", default-features = false, features = ["cargo_bench_support"] }

[profile.release]
strip = true
lto = "thin"
