[package]
name = "spargen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../README.md"

[features]
default = ["cli", "uuid", "time"]
# Gates the `spargen` binary and its CLI-only dependencies so `cargo install spargen` works
# out of the box while library builds stay lean (PRD §2.1). The colored-output deps
# (anstream/anstyle) are added with the diagnostic renderer implementation.
cli = ["dep:clap"]
# `format: uuid` / `date-time` / `date` type mappings in generated output (PRD §6.2). Default on;
# disabling falls back to `String`. The teeth live in the emitted crate's own manifest.
uuid = []
time = []

[dependencies]
# diag
serde = { workspace = true }
serde_json = { workspace = true }
camino = { workspace = true }
# source
indexmap = { workspace = true }
yaml-rust2 = { workspace = true }
# name
proc-macro2 = { workspace = true }
quote = { workspace = true }
# codegen
syn = { workspace = true }
prettyplease = { workspace = true }
# cli (feature-gated)
clap = { workspace = true, optional = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }

[[bin]]
name = "spargen"
required-features = ["cli"]
