[package]
name = "spargen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../README.md"

[features]
default = ["cli", "uuid", "time"]
# Gates the `spargen` binary and its CLI-only dependencies so `cargo install spargen` works
# out of the box while library builds stay lean. The colored-output deps
# (anstream/anstyle) are added with the diagnostic renderer implementation.
cli = ["dep:clap", "remote-fetch"]
# `format: uuid` / `date-time` / `date` type mappings in generated output. Default on;
# disabling falls back to `String`. The teeth live in the emitted crate's own manifest.
uuid = []
time = []
# Enables the reqwest-backed remote fetcher behind `spargen lock`. This is the ONLY place the
# generator touches the network; `generate`/`check` never do. It is pulled in by `cli` so the
# installed binary can vendor remote `$ref`s, and kept as a separate feature so a library-only
# build (e.g. from `build.rs`) can opt in without the whole CLI.
remote-fetch = ["dep:reqwest"]

[dependencies]
# diag
serde = { workspace = true }
serde_json = { workspace = true }
camino = { workspace = true }
# source
indexmap = { workspace = true }
yaml-rust2 = { workspace = true }
# name
proc-macro2 = { workspace = true }
quote = { workspace = true }
# codegen
syn = { workspace = true }
prettyplease = { workspace = true }
# cli (feature-gated)
clap = { workspace = true, optional = true }
# Remote-fetch (feature-gated): the ONLY networked path, used by `spargen lock` to vendor
# remote `$ref`s. Not in the runtime graph of generated output — this is the generator only.
reqwest = { version = "0.12", default-features = false, features = [
    "blocking",
    "rustls-tls",
], optional = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }

[[bin]]
name = "spargen"
required-features = ["cli"]
