[package]
name = "support-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Freestanding runtime embedded into spargen-generated clients. Not published."
publish = false

# The runtime is embedded verbatim into generated output. Its dependency
# surface is exactly the near-universal set a consumer's graph already carries — no
# spargen crate, and nothing project-specific. The emitted crate additionally carries the
# feature-gated `uuid`/`time` mappings; those live in the synthesized crate manifest (emit),
# not here, since this crate holds only the runtime, not the generated models.
[dependencies]
reqwest = { version = "0.12", default-features = false }
serde = "1.0"
serde_json = "1.0"
bytes = "1"
secrecy = "0.10"
