[package]
name = "support-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Freestanding runtime embedded into spargen-generated clients. Not published."
publish = false

# The runtime is embedded verbatim into generated output. Its dependency
# surface is exactly the near-universal set a consumer's graph already carries — no
# spargen crate, and nothing project-specific. The emitted crate additionally carries the
# feature-gated `uuid`/`time` mappings; those live in the synthesized crate manifest (emit),
# not here, since this crate holds only the runtime, not the generated models.
# The `xml` feature adds an XML request/response body codec backed by `quick-xml`. It is OFF by
# default, so the default dependency set stays exactly reqwest/serde/serde_json/bytes/secrecy; a
# generated client turns it on only when its spec uses an `application/xml` / `text/xml` body.
[features]
xml = ["dep:quick-xml"]

[dependencies]
reqwest = { version = "0.12", default-features = false }
serde = "1.0"
serde_json = "1.0"
bytes = "1"
secrecy = "0.10"
quick-xml = { version = "0.37", features = ["serialize"], optional = true }

# Test-only: synthesize in-memory `reqwest::Response`s (via `http::Response`) to exercise the body
# readers with a poll-once noop waker — no async runtime, and never embedded (the test module is
# stripped at embed time).
[dev-dependencies]
http = "1"
# The runtime itself needs only serde's runtime traits; the test module derives `Deserialize` on
# throwaway payload structs, so the `derive` feature is pulled in for the test build only.
serde = { version = "1.0", features = ["derive"] }
